--- a/public/c3.css
+++ b/public/c3.css
@@ -165,3 +165,13 @@
 .c3-chart-arc .c3-gauge-value {
   fill: #000;
   /*  font-size: 28px !important;*/ }
+
+.c3-ygrid-line.minmax line {
+    stroke: red;
+    stroke-dasharray: 10
+}
+
+.c3-grid text {
+    fill: red;
+    font-size: 1.5rem;
+}
