--- a/public/bootstrap.css
+++ b/public/bootstrap.css
@@ -1090,7 +1090,7 @@ body {
   font-size: 15px;
   line-height: 1.4;
   color: #222222;
-  background-color: #ffffff;
+  background-color: #eceaea;
 }
 input,
 button,
