--- a/public/libary.css
+++ b/public/libary.css
@@ -69,7 +69,7 @@
   font-family: 'Helvetica';
   margin-top: 2rem;
   text-align: right;
-  color: green;
+  color: red;
   font-size: 2rem;
   margin-right: 1rem;
 }
