--- a/public/libary.css
+++ b/public/libary.css
@@ -84,6 +84,15 @@
   width: 1200px;
 }
 
+#logo{
+  margin-top: 2px;
+  margin-right: 2rem;
+  float: left;
+  margin-left: 2rem;
+  width: 40px;
+  height: 40px;
+}
+
 /*#gauge-chart{
    background-color: rgba(255, 255, 255, 0.9);
     border-radius: 2rem;
