--- a/public/machine.css
+++ b/public/machine.css
@@ -16,7 +16,7 @@
   margin-left: auto;
   margin-right: auto;
   float: left;
-  width: 196px;
+  width: 200px;
   height: 300px;
   background-color: rgba(255,255,255,0.8);
 }
@@ -99,10 +99,30 @@
 }
 
 .iconArea{
-  width: 70%;
-  margin-top: 10rem;
+  margin-left: 1rem;
+  width: 80%;
 }
 
-#millingIcon{
-  width: 62%;
+.block{
+  width: 20px;
+  height: 20px;
+  background-color: #333333;
+  float: left;
+  border-radius: 5px;
+  border-color: black;
+  border-style: double;
+  border-width: 10px;
+}
+
+.line{
+  width: 120px;
+  height: 6px;
+  margin-top: 7px;
+  float: left;
+  background-color: #f93030;
+}
+
+.lightBarrier{
+  margin-left: 20px;
+  margin-top: 20rem;
 }
