--- a/public/libary.css
+++ b/public/libary.css
@@ -126,6 +126,56 @@
   text-align: center;
 }
 
+.erpContainer{
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 2rem;
+  border-width: 0.1rem;
+  border-color: #333333;
+  border-style: solid;
+  position: relative;
+  width:200px;
+  height: 350px;
+}
+
+.erptitle{
+  font-family: 'Helvetica';
+  color: #333333;
+  margin-top: 1rem;
+  margin-left: 1rem;
+  font-size: 2rem;
+  text-align: left;
+  margin-right: 1rem;
+  margin-bottom: -1rem;
+  text-align: center;
+}
+
+.erpcontent{
+  background-color: rgba(211, 211, 211, 0.9);
+  border-radius: 2rem;
+  border-width: 0.1rem;
+  border-color: #333333;
+  border-style: solid;
+  position: relative;
+  margin-top:1rem;
+  margin-bottom:1rem;
+  margin-left: 1rem;
+  margin-right: 1rem
+}
+
+.erpcontenttitle{
+  font-family: 'Helvetica';
+  color: #333333;
+  font-size: 1.3rem;
+  text-align: center;
+}
+
+.erpdata{
+  font-family: 'Helvetica';
+  color: #333333;
+  font-size: 1.3rem;
+  text-align: center;
+}
+
 /*#gauge-chart{
    background-color: rgba(255, 255, 255, 0.9);
     border-radius: 2rem;
