update layout responsive

--- a/public/libary.css
+++ b/public/libary.css
@@ -95,15 +95,18 @@
 
 .machineData{
   margin: auto;
-  padding-bottom: 20rem;
-  width: 1000px;
+  /* padding-bottom: 20rem; */
+  width: 60%;
+  /* margin-left: 25%; */
+  /* margin-right: 25%; */
+  /* margin-bottom: 11rem; */
 }
 
 .machineValue{
   visibility: hidden;
-  max-height: 260px;
-  position: relative;
-  width: 40%;
+  /* max-height: 260px; */
+  /* position: relative; */
+  width: 39%;
   float: left;
 }
 
@@ -123,7 +126,7 @@
   font-family: 'Helvetica';
   color: #333333;
   margin-top: 2rem;
-  font-size: 3rem;
+  font-size: 2.5rem;
   text-align: center;
 }
 
@@ -138,11 +141,70 @@
 .machineIconBox{
   visibility: hidden;
   width: 16%;
-  margin-left: 2rem;
-  margin-right: 2rem;
+  margin-left: 3%;
+  margin-right: 3%;
   height: 234.5px;
   position: relative;
   float: left;
+}
+
+.erpContainer{
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 2rem;
+  border-width: 0.1rem;
+  border-color: #333333;
+  border-style: solid;
+  position: relative;
+  width: 15%;
+  /* height: 90%; */
+  margin-left: 2.5%;
+  margin-right: 2.5%;
+  margin-top: 1.5%;
+  /* margin-bottom: 5%; */
+  float: left;
+}
+
+.erptitle{
+  font-family: 'Helvetica';
+  color: #333333;
+  margin-top: 1rem;
+  margin-left: 1rem;
+  font-size: 2vw;
+  text-align: left;
+  margin-right: 1rem;
+  margin-bottom: -1rem;
+  text-align: center;
+}
+
+.erpcontent{
+  background-color: rgba(211, 211, 211, 0.9);
+  border-radius: 2rem;
+  border-width: 0.1rem;
+  border-color: #333333;
+  border-style: solid;
+  position: relative;
+  margin-top: 1.5rem;
+  margin-bottom:1rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.erpcontenttitle{
+  font-family: 'Helvetica';
+  color: #333333;
+  font-size: 1.4vw;
+  text-align: center;
+}
+
+.erpdata{
+  font-family: 'Helvetica';
+  color: #333333;
+  font-size: 1vw;
+  text-align: center;
+}
+
+.machineBox{
+  margin-top: 30rem;
 }
 
 /*#gauge-chart{
